--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proffy | Plataforma de estudos</title>
+    <title>Proffy | Sua plataforma de estudos</title>
 
-     <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/partials/page-landing.css">
+
+     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap" rel="stylesheet">
     
 
 </head>
@@ -13,10 +16,13 @@
 <body id="page-landing">
 
     <div id="container">
-        <h1>Proffy</h1>
-        <p>Sua plataforma de estudos online</p>
-        <img src="" alt="Logo">
-        <a href="#">link</a>
+      <div class="logo-container">       
+        <img src="/images/Proffylogo.svg" alt="Proffy">
+        <h2>Sua plataforma de estudos online</h2>
+      </div>
+
+      <img class="hero-image" src="/images/landing.svg" alt="Plataforma de Estudos">
+
 
         <button>Estudar</button>
         <button>Dar Aulas</button>
