ajuste na página study.html

--- a/study.html
+++ b/study.html
@@ -63,6 +63,47 @@
        </form>
       </div>
      </header>
+     <main>
+       <!-- conteudo principal pagina -->
+       <article class="teacher-item">
+         <header>
+           <img src="https://avatars2.githubusercontent.com/u/2254731?s=460&amp;
+           u=0ba16a79456c2f250e7579cb388fa18c5c2d7d65&amp;v=4" alt="Diego Fernandes">
+           <div>
+             <strong> Diego Fernandes</strong>
+           <span>Química</span></div>
+         </header>
+         <p>Entusiasta das melhores tecnologias de química avançada.<br><br>Apaixonado por explodir coisas em 
+         laboratório e por mudar a vida das pessoas através de experiencias.Mais de 200.000 pessoas já passaram 
+         por uma das explosões</p>
+        <footer>
+          <p>Preço/hora<strong>R$ 20,00</strong>
+          </p>
+          <button type="button"> <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
+          </button>
+        </footer>
+       </article>
+
+       <article class="teacher-item">
+        <header>
+          <img src="https://avatars1.githubusercontent.com/u/9097132?s=460&u=d0793ebbde0fa8170e7b4603b94a3156ef28e901&v=4"
+           alt="Giane Mariano">
+          <div>
+            <strong> Giane Mariano</strong>
+          <span>Física</span></div>
+        </header>
+        <p>Apaixonada por física e tecnologias nucleares.<br><br>Experiência em explodir coisas no 
+        laboratório e por mudar a vida das pessoas através do ensino.Mais de 200.000 pessoas já passaram 
+        por uma das explosões</p>
+       <footer>
+         <p>Preço/hora<strong>R$ 50,00</strong>
+         </p>
+         <button type="button"> <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
+         </button>
+       </footer>
+      </article>
+
+     </main>
     </div>    
   </body>
 </html>
