--- a/give-classes.html
+++ b/give-classes.html
@@ -64,6 +64,56 @@
             </div>
 
          </fieldset>
+
+         <fieldset>
+         <legend>Sobre a aula</legend>
+          <div class="select-block">
+             <label for="subject">Matéria</label>
+             <select name="subject" id="subject" required>
+               <option value="">Selecione uma opção</option>
+               <option value="1">Artes</option>
+               <option value="2">Biologia</option>
+               <option value="3">Ciências</option>
+               <option value="4">Educação Física</option>
+               <option value="5">Física</option>
+               <option value="6">Geografia</option>
+               <option value="7">História</option>
+               <option value="8">Matemática</option>
+               <option value="9">Química</option>
+               <option value="10">Português</option>
+             </select>
+           </div>
+           <div class="input-block">
+              <label for="cost">Custo da sua hora/aula
+                <small>(R$)</small>
+              </label>
+              <input type="cost" id="cost" type="number" required>
+           </div>       
+           
+         </fieldset>
+
+         <fieldset>
+           <legend>Horários Disponíveis
+             <button id="add-time">+Novo Horário</button>
+           </legend>
+
+           <div class="schedule-item">
+             <div class="select-block">
+                <label for="weekday">Dia da semana</label>
+                <select name="weekday[]" id="weekday">
+                  <option value="">Selecione uma opção</option>
+                  <option value="0">Domingo</option>
+                  <option value="1">Segunda-feira</option>
+                  <option value="2">Terça-feira</option>
+                  <option value="3">Quarta-feira</option>
+                  <option value="4">Quinta-feira</option>
+                  <option value="5">Sexta-feira</option>
+                  <option value="6">Sábado</option>
+                </select>
+             </div>
+           </div>
+         </fieldset>
+
         </form>
       </main>
     </div>    
