--- a/give-classes.html
+++ b/give-classes.html
@@ -92,7 +92,7 @@
            
          </fieldset>
 
-         <fieldset>
+         <fieldset id="schedule-items">
            <legend>Horários Disponíveis
              <button id="add-time">+Novo Horário</button>
            </legend>
